@@ -58,6 +58,7 @@ export(get.treeinfo)
 export(get.treetext)
 export(getNodeNum)
 export(getRoot)
+export(get_clade_position)
 export(get_heatmap_column_position)
 export(get_taxa_name)
 export(ggplotGrob)
